# tailserver

./: .gitignore  BUILD-CMAKE  CMakeLists.txt  COPYING  INSTALL  Makefile  README.md  TODO  config.h.cmake  configure  configure.cmake
cmake/: cmake_parse_arguments.cmake  config.h.cmake  configure.cmake  cpack_source_ignore_files.cmake  find_libev.cmake  info_macros.cmake.in  install_layout.cmake  install_macros.cmake  make_dist.cmake.in  package_name.cmake  version.cmake
cmake/build_configurations/: release.cmake
cmake/os/: Cygwin.cmake  HP-UX.cmake  Linux.cmake
docs/: CMakeLists.txt  capture_output.sh  help2man  tail_using_logfile.sh  tailclient.1  tailclient.sh  tailclient.x  tailserver.1  tailserver.x
man/: CMakeLists.txt  tailserverman.1
src/: CMakeLists.txt  VERSION  buffer.c  buffer.h  clientconn.c  clientconn.h  clientloop.c  clientloop.h  clientpipes.c  clientpipes.h  config.h  evsleep.c  evsleep.h  fcntl_wrap.h  my_compiler.h  pipes.c  pipes.h  sockets.c  sockets.h  stdout.c  stdout.h  tailclient.c  tailserver.c
src/coreutils/: README  attribute.h  close-stream.c  closeout.c  closeout.h  common-macros.h  dtotimespec.c  error.c  error.h  fadvise.c  fadvise.h  fpending.c  fpending.h  freopen-safer.c  intmax.h  intprops.h  stdio--.h  stdio-safer.h  system.h  timespec.h  unlocked-io.h  version-etc.c  version-etc.h  xfreopen.c  xfreopen.h  xnanosleep.c  xstrtod.c  xstrtod.h  xstrtol.c  xstrtol.h
src/portability/: bzero.h  fcntl_wrap.h  memcpy.h  my_string.h  offsetof.h  safe_write.c  safe_write.h  strmov.c  strmov.h
support-files/: CMakeLists.txt  build-tags
test/: TODO.txt  fake_server.sh  fast_server.sh  slow_server.sh  test_readme_ex.sh
